--- a/index.html
+++ b/index.html
@@ -6,18 +6,29 @@
 	<script src="https://www.gstatic.com/firebasejs/3.7.1/firebase.js"></script>
 	<script src="js/utils.js"></script>
 <script>
+  
   var config = {
     apiKey: "AIzaSyDMPRg760qLZsPv7vyXW41BXHSTffciP7k",
     databaseURL: "https://cs-451.firebaseio.com",
   };
+
+  // A sample checkers room
   var sessionName = "test"
   var App = firebase.initializeApp(config);
+  
   var session = null
+  
   console.log(App.name);  // "[DEFAULT]"
+  
   var defaultDatabase = App.database();
+
+  // GET A reference to the firebase-checkers room
   var sessionRef = firebase.database().ref('/sessions/'+sessionName);
+
+
   sessionRef.on('value', function(snapshot) {
   			session = snapshot.val()
+  			// Nothing exists
 			if (session == null){
 				console.log("first player")
 				data = initJson()
@@ -25,17 +36,19 @@
 				updates['/sessions/'+sessionName] = data;
 				res = firebase.database().ref().update(updates);
 				console.log(res)
-
-			}else if (session.players.length ==1 && 
+			}
+			// Player 1 has joined. Wait for player 2
+			else if (session.players.length ==1 && 
 				session.players[0] == getName()){
 				console.log("waiting for player 2")
 			}
+			// Both players are already in the room
 			else if (session.players.length >1){
 				console.log("REDIRECT TO GAME")
 			}
+			// Handle player 2 joining room. 
+			// When Player 1 is already in room
 			else{
-				console.log("cant match "+session.players[0])
-				// Handle redirection to main game here
 				// NOTE PLAYER 2 has firebase index == 1
 				// NOTE PLAYER 1 has firebase index == 0	
 				console.log("Player 2")			
@@ -45,16 +58,14 @@
 							.ref('/sessions/'+sessionName+"/players")
 							.set(session.players)
 			}
- 		
 	});
-
-
   function exit(){
-  	// sessionRef.remove()
+  	sessionRef.remove()
   	// HANDLE just one player being present
   	console.log("deleted")	
   }
 </script>
+
 </head>
 <body onbeforeunload="exit()">
 
