--- a/game.html
+++ b/game.html
@@ -2,14 +2,27 @@
 <html>
 <head>
   <title>HTML5 Checkers</title>
-  <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.3/jquery.min.js"></script>
+  <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.1.0/jquery.min.js"></script>
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/materialize/0.98.0/css/materialize.min.css">
+
+  <!-- Compiled and minified JavaScript -->
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/0.98.0/js/materialize.min.js"></script>
   <link href="https://fonts.googleapis.com/css?family=Roboto:400,700" rel="stylesheet">
   <script src="https://www.gstatic.com/firebasejs/3.7.1/firebase.js"></script>
-  <script src="js/utils.js"></script>
-  <link href="css/style.css" rel="stylesheet">
-  <script src="js/script.js"></script>
+  <script src="./js/utils.js"></script>
+  <link href="./css/style.css" rel="stylesheet">
+  <script src="./js/script.js"></script>
 </head>
 <body>
+  <nav>
+    <div class="nav-wrapper">
+      <a href="#!" class="brand-logo">Logo</a>
+      <ul class="right hide-on-med-and-down">
+        <li><a href="sass.html"><i class="material-icons left">search</i>Link with Left Icon</a></li>
+        <li><a href="badges.html"><i class="material-icons right">view_module</i>Link with Right Icon</a></li>
+      </ul>
+    </div>
+  </nav>
   <div class="column">
     <div id="board">
       <div class="tiles"></div>
