updating board/session name to hello

--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
 	  };
 
 	  // A sample checkers room
-	  var sessionName = "test"
+	  var sessionName = "hello"
 	  var App = firebase.initializeApp(config);
 
 	  var session = null
