--- a/game.html
+++ b/game.html
@@ -11,6 +11,7 @@
   <script src="https://www.gstatic.com/firebasejs/3.7.1/firebase.js"></script>
   <script src="./js/utils.js"></script>
   <link href="./css/style.css" rel="stylesheet">
+  <script src="./js/validation.js"></script>
   <script src="./js/script.js"></script>
 </head>
 <body>
