--- a/game.html
+++ b/game.html
@@ -20,6 +20,9 @@
 	  <link href="./css/style.css" rel="stylesheet">
 	  <script src="./js/validation.js"></script>
 	  <script src="./js/script.js"></script>
+    <script src= "http://cdnjs.cloudflare.com/ajax/libs/toastr.js/latest/js/toastr.min.js"></script>
+    <script src= "http://cdnjs.cloudflare.com/ajax/libs/toastr  .js/latest/js/toastr.min.js"></script>
+<link rel="stylesheet" type="text/css" href="http://cdnjs.cloudflare.com/ajax/libs/toastr.js/latest/css/toastr.min.css">
 	</head>
 	<body>
 
