--- a/game.html
+++ b/game.html
@@ -16,13 +16,7 @@
 		<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.1.0/jquery.min.js"></script>
 		<link href="https://fonts.googleapis.com/css?family=Roboto:400,700" rel="stylesheet">
 	  <script src="https://www.gstatic.com/firebasejs/3.7.1/firebase.js"></script>
-	  <script src="./js/utils.js"></script>
-	  <link href="./css/style.css" rel="stylesheet">
-	  <script src="./js/validation.js"></script>
-	  <script src="./js/script.js"></script>
-    <script src= "http://cdnjs.cloudflare.com/ajax/libs/toastr.js/latest/js/toastr.min.js"></script>
-    <script src= "http://cdnjs.cloudflare.com/ajax/libs/toastr  .js/latest/js/toastr.min.js"></script>
-<link rel="stylesheet" type="text/css" href="http://cdnjs.cloudflare.com/ajax/libs/toastr.js/latest/css/toastr.min.css">
+
 	</head>
 	<body>
 
@@ -31,17 +25,16 @@
 				<div class="inner">
 					<nav>
 						<ul>
-							<li><a href="#intro">Welcome</a></li>
-							<li><a href="#one">Who we are</a></li>
-							<li><a href="#two">What we do</a></li>
-							<li><a href="#three">Get in touch</a></li>
+							<li><a href="#">Current Player <span id ="currPlayer">33</span></a></li>
+							<li><a href="#">Enemy Captured <span id ="enemyCaptured">0</span></a></li>
+							<li><a href="#">You Captured <span id ="youCaptured">0</span></a></li>
 						</ul>
 					</nav>
 				</div>
 			</section>
 
 		<!-- Wrapper -->
-		<div id="barChart_div" style="width: 500px; height: 250px;float:left; "></div>
+		<div id="barChart_div" style="width: 600px; height: 350px;float:left; "></div>
 						<div class="column">
 					    <div id="board">
 					      <div class="tiles"></div>
@@ -51,9 +44,28 @@
 					        <div class="player2pieces">
 					        </div>
 					      </div>
-					  </div>
+                <div id="future">
+                </future>
+					  <!-- </div> -->
 
-
+    <script type="text/javascript">
+    
+      function updateDataInDisplay(CurrentPlayer,thisCapture,enemyCaptured) {
+        console.log(String(CurrentPlayer))
+        $("#currPlayer").text(String(CurrentPlayer)) 
+        $("#enemyCaptured").text(thisCapture)
+        $("#youCaptured").text(enemyCaptured) 
+       }
+    
+    </script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/toastr.js/latest/js/toastr.min.js"></script>
+    <link type="text/css" href="https://cdnjs.cloudflare.com/ajax/libs/toastr.js/latest/css/toastr.css">
+    <script src="./js/utils.js"></script>
+    <link href="./css/style.css" rel="stylesheet">
+    <!--  -->
+    <!-- <script src="./js/validate-v2.js"></script> -->
+    <script src="https://storage.googleapis.com/cs-451.appspot.com/validation.js"></script>
+    <script src="https://storage.googleapis.com/cs-451.appspot.com/script.js"></script>
 		<!-- Scripts -->
 			<script src="assets/js/jquery.min.js"></script>
 			<script src="assets/js/jquery.scrollex.min.js"></script>
