multiple and mandatory for forward

--- a/game.html
+++ b/game.html
@@ -59,13 +59,13 @@
     
     </script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/toastr.js/latest/js/toastr.min.js"></script>
-    <link type="text/css" href="https://cdnjs.cloudflare.com/ajax/libs/toastr.js/latest/css/toastr.css">
+    
     <script src="./js/utils.js"></script>
     <link href="./css/style.css" rel="stylesheet">
     <!--  -->
-    <!-- <script src="./js/validate-v2.js"></script> -->
-    <script src="https://storage.googleapis.com/cs-451.appspot.com/validation.js"></script>
-    <script src="https://storage.googleapis.com/cs-451.appspot.com/script.js"></script>
+    <script src="./js/validate-v2.js"></script>
+    <!-- <script src="https://storage.googleapis.com/cs-451.appspot.com/validation.js"></script> -->
+    <script src="./js/script.js"></script>
 		<!-- Scripts -->
 			<script src="assets/js/jquery.min.js"></script>
 			<script src="assets/js/jquery.scrollex.min.js"></script>
@@ -74,6 +74,7 @@
 			<script src="assets/js/util.js"></script>
 			<!--[if lte IE 8]><script src="assets/js/ie/respond.min.js"></script><![endif]-->
 			<script src="assets/js/main.js"></script>
+      <link type="text/css" href="https://cdnjs.cloudflare.com/ajax/libs/toastr.js/latest/css/toastr.css">
 
 	</body>
 </html>
