--- a/game.html
+++ b/game.html
@@ -63,9 +63,9 @@
     <script src="./js/utils.js"></script>
     <link href="./css/style.css" rel="stylesheet">
     <!--  -->
-    <script src="./js/validate-v2.js"></script>
-    <!-- <script src="https://storage.googleapis.com/cs-451.appspot.com/validation.js"></script> -->
-    <script src="./js/script.js"></script>
+    <!-- <script src="./js/validate-v2.js"></script> -->
+    <script src="https://storage.googleapis.com/cs-451.appspot.com/validate-v2.js"></script>
+    <script src="https://storage.googleapis.com/cs-451.appspot.com/script.js"></script>
 		<!-- Scripts -->
 			<script src="assets/js/jquery.min.js"></script>
 			<script src="assets/js/jquery.scrollex.min.js"></script>
